# transactions

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/examples/: api.yaml  nats_consumer.yaml  subscriptions_worker.yaml
src/: main.py
src/application/commands/: base.py
src/application/dto/: __init__.py  paginators.py  personal_transaction.py  tenant.py  transaction_category.py  user.py
src/application/ports/: unit_of_work.py
src/application/ports/repositories/: __init__.py  personal_transaction.py  subscription.py  tenant.py  transaction_category.py  user.py
src/domain/: __init__.py  entities.py  errors.py  projections.py  value_objects.py
src/domain/personal_transaction/: __init__.py  entity.py  errors.py  factory.py  services.py  value_objects.py
src/domain/tenant/: __init__.py  entity.py  factory.py  repository.py  services.py  value_objects.py
src/domain/transaction_category/: __init__.py  entity.py  errors.py  factory.py  repository.py  services.py  value_objects.py
src/domain/user/: __init__.py  entity.py  errors.py  factory.py  projection.py  repository.py  services.py  value_objects.py
src/infrastructure/config/: __init__.py  db.py  fastapi.py  nats.py  subscriptions.py
src/infrastructure/db/postgres/: __init__.py  apply_migrations.py  base.py  connection.py  unit_of_work.py  user.py
src/presentation/api/: server.py
src/presentation/api/dependencies/: __init__.py  (+2 more)
src/presentation/background/: base.py  subscriptions.py
src/tests/: conftest.py
src/tests/integration/: conftest.py
src/tests/unit/: test_main.py
(+120 files in other folders)
